# Compilador-dislexia

./: .gitignore  CMakeLists.txt  README.md  compilador
api/: package.json  server.js
backend/: CMakeLists.txt
backend/data/: falsos_positivos.json  homofonos.json  modelo_ponderacion.json  pares_visuales.json  patrones_silabicos.json  reglas_deteccion.json  sight_words.json
backend/input/: ejemplo1.txt  ejemplo2.txt  ejemplo3.txt  prueba1.txt  prueba2.txt  prueba3.txt  prueba4.txt
backend/output/: reporte_dislexico.txt
backend/src/: analizador_lexico.cpp  analizador_semantico.cpp  analizador_semantico.h  analizador_sintactico.cpp  analizador_sintactico.h  main.cpp  mensaje.txt
data/: errores_tipicos.json  palabras_riesgo.json
frontend/: index.html
frontend/assets/: Ejemplo1.m4a  Ejemplo2.m4a  Ejemplo3.m4a
frontend/css/: styles.css
frontend/js/: main.js
input/: prueba1.txt  prueba2.txt
output/: reporte_dislexico.txt
src/: analizador_lexico.cpp  analizador_lexico.h  analizador_semantico.cpp  analizador_semantico.h  analizador_sintactico.cpp  analizador_sintactico.h  main.cpp
